imports touch icon

--- a/web/index_template.html
+++ b/web/index_template.html
@@ -51,6 +51,7 @@
       href="https://fonts.googleapis.com/css?family=Zilla+Slab:400,600"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" href="./apple-touch-icon-150x150.png" />
     <!--
       Note: this inline script is allowed through CSP using a hash. To change this, you must also modify the hash
     -->
