Prepare for voice -> commonvoice domain change

--- a/web/index_template.html
+++ b/web/index_template.html
@@ -21,22 +21,22 @@
       property="og:description"
       content="Common Voice is a project to help make voice recognition open to everyone. Now you can donate your voice to help us build an open-source voice database that anyone can use to make innovative apps for devices and the web."
     />
-    <meta property="og:url" content="https://voice.mozilla.org/" />
+    <meta property="og:url" content="https://commonvoice.mozilla.org/" />
     <meta
       property="og:image"
-      content="https://voice.mozilla.org/img/cv-social-1024x512.jpg"
+      content="https://commonvoice.mozilla.org/img/cv-social-1024x512.jpg"
     />
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="512" />
     <meta
       property="og:image"
-      content="https://voice.mozilla.org/img/cv-social-1024x512@2x.jpg"
+      content="https://commonvoice.mozilla.org/img/cv-social-1024x512@2x.jpg"
     />
     <meta property="og:image:width" content="2048" />
     <meta property="og:image:height" content="1024" />
     <meta
       property="og:image"
-      content="https://voice.mozilla.org/img/cv-social-1024x512@3x.jpg"
+      content="https://commonvoice.mozilla.org/img/cv-social-1024x512@3x.jpg"
     />
     <meta property="og:image:width" content="3072" />
     <meta property="og:image:height" content="1536" />
@@ -56,7 +56,7 @@
     -->
     <!-- prettier-ignore -->
     <script>
-      if (window.location.origin !== 'https://voice.mozilla.org') {
+      if (window.location.origin !== 'https://commonvoice.mozilla.org') {
         console.log('disabling analytics on non production');
         window.ga = function() {};
       } else if (
