--- a/web/index_template.html
+++ b/web/index_template.html
@@ -51,6 +51,10 @@
       href="https://fonts.googleapis.com/css?family=Zilla+Slab:400,600"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      href="https://voice.mozilla.org/img/voice-touch-icon.png"
+    />
     <!--
       Note: this inline script is allowed through CSP using a hash. To change this, you must also modify the hash
     -->
