Update touch icon root URL, GA CSP

--- a/web/index_template.html
+++ b/web/index_template.html
@@ -53,7 +53,7 @@
     />
     <link
       rel="apple-touch-icon"
-      href="https://voice.mozilla.org/img/voice-touch-icon.png"
+      href="https://commonvoice.mozilla.org/img/voice-touch-icon.png"
     />
     <!--
       Note: this inline script is allowed through CSP using a hash. To change this, you must also modify the hash
