Switch to two other fonts with better alphabet support where applicable

--- a/web/index_template.html
+++ b/web/index_template.html
@@ -52,6 +52,14 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css?family=Inter:300,600"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700"
+      rel="stylesheet"
+    />
+    <link
       rel="apple-touch-icon"
       href="https://commonvoice.mozilla.org/img/voice-touch-icon.png"
     />
