--- a/web/index_template.html
+++ b/web/index_template.html
@@ -66,7 +66,9 @@
 
     <!--
       Note: this inline script is allowed through CSP using a hash.
-      To change this, you must also modify the hash in server.ts
+      To change this, you must also modify the two hashes in server.ts - once
+      for what's written here and once for what gets built for production
+      in index.html
     -->
     <!-- prettier-ignore -->
     <script>
