--- a/web/index_template.html
+++ b/web/index_template.html
@@ -100,4 +100,5 @@
     <noscript>Please enable JavaScript to run this app</noscript>
     <div id="root"></div>
   </body>
+  <!-- fs claim code: 3cd1c033-ce74-4d5c-a69f-09603dc5093f -->
 </html>
